2008-12-21  Kevin B. Kenny  <kennykb@acm.org>

	* win/makefile.vc:	Added files for a MSVC build system.
	* win/rules.vc:		Thanks to Pat Thoyts <patthoyts@users.sf.net>
	* win/versions.vc:	for developing these files.n
	* win/tdbc.rc:		

2008-12-20  Kevin B. Kenny  <kennykb@acm.org>

	sign manifest
	
2008-12-20  Daniel Steffen  <das@users.sourceforge.net>

	* Makefile.in: use INSTALL_LIBRARY instead of INSTALL_PROGRAM to
	install libraries, avoids breakage from tcl's install-strip when
	built as a bundled package.

	* tclconfig/ChangeLog:	update to latest TEA from tcl CVS, which has
	* tclconfig/tcl.m4:	Jan's 2008-12-19 changes (tcl.m4 r1.127)

	* configure.in:		update TEA_INIT for TEA 3.7
	* configure:		autoconf-2.59

2008-12-19  Kevin Kenny  <kennykb@acm.org>

	* aclocal.m4: Changed to make ADD_MANIFEST default to ':'
	rather than an empty string, to silence a warning on BSD compiles.
	Thanks to Stu Cassoff for reporting this bug.
	* configure: autoconf-2.59
	
2008-12-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* tclconfig/tcl.m4: fix odbc build on mingw32
	* configure:	autoconf-2.59

2008-12-17  Don Porter  <dgp@users.sourceforge.net>

	* README:	New file.
	* configure:	autoconf-2.59

2008-12-07  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc.n: Added a file omitted from the 2008-11-30 commit.
	* configure.in:
	* generic/tdbc.h: Advanced version number to 1.0b1 in preparation
	for release.
	* configure: Autoconf 2.61
	
2008-11-30  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in: Removed nagging reminder about documentation.
	* configure.in: Advanced revision to 0.2
	* configure: Autoconf 2.61
	* doc/tdbc.n:			First cut at a set of man
	* doc/tdbc_connection.n:	pages for TDBC. Redactors
	* doc/tdbc_resultSet.n:		and proofreaders are
	* doc/tdbc_statement.n:		welcome to submit
	* doc/tdbc_tokenize.n:		improvements.
	* generic/tdbc.c: Lowercased the package name 'tdbc'
	* generic/tdbc.h: Advanced patchlevel to 0.2a1